Fix header animation flicker bug

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -7,7 +7,7 @@
 .header {
   align-items: center;
   justify-content: center;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   max-width: 100vw; //comment is for when nav was grid and not flex --> without this grid-items don't wrap and overflow outside viewport
